uniqeVallueArray, isPalindrome